--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "blessed": "^0.1.81",
     "colors": "^1.4.0",
     "date-fns": "^2.23.0",
+    "libphonenumber-js": "^1.9.25",
+    "node-fetch": "2.6.1",
     "qrcode-terminal": "^0.12.0"
   },
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "start": "node ./index.js"
   }
